--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -150,16 +150,71 @@
                             </div>
                         </div>
 
-                        <div class="infoSection row2">
+                    </div>
 
+                    <div class="pointsAndLeasing">
+
+                        <div class="bonusPoints">
+
+                            <div class="bonusPointsTitle">
+                                <h2>Move-U Miles</h2>
+                            </div>
+
+                            <div class="bonusProgress">
+
+                                <div class="progress-bar">
+                                    <div class="progress-fill" style="width: 63%;"></div>
+                                </div>
+
+                                <span class="progress-text">2 363 p</span>
+
+                            </div>
+
+                            <div class="bonusLevels">
+
+                                <div class="bonusLevelsRight">
+
+                                    <figure class="level member">
+                                        <div class="bonusDot"></div>
+                                        <figcaption>Medlem</figcaption>
+                                    </figure>
+
+                                    <figure class="level silver">
+                                        <div class="bonusDot"></div>
+                                        <figcaption>Silver</figcaption>
+                                    </figure>
+
+                                    <figure class="level gold">
+                                        <div class="bonusDot"></div>
+                                        <figcaption>Guld</figcaption>
+                                    </figure>
+
+                                    <figure class="level diamond">
+                                        <div class="bonusDot"></div>
+                                        <figcaption>Diamant</figcaption>
+                                    </figure>
+
+                                </div>
+
+                            </div>
                         </div>
 
-                        <div class="infoSection row3"></div>
-                        <div class="infoSection row4"></div>
-                        <div class="infoSection row5"></div>
-                        <div class="infoSection row6"></div>
-                        <div class="infoSection row7"></div>
-                        <div class="infoSection row8"></div>
+
+                        <div class="leasing">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum alias a dicta, rem eum
+                                rerum impedit voluptatum. Iusto ipsum et veniam asperiores ipsa. Sequi possimus nemo
+                                r unde ea, enim quae facilis suscipit modi eaque? Architecto
+                                sed earum tempore laborum nostrum reiciendis vitae, quas ipsam porro aspernatur
+                                necessitatibus, saepe atque.</p>
+                        </div>
+
+                        <div class="campaigns">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum alias a dicta, rem eum
+                                rerum impedit voluptatum. Iusto ipsum et veniam asperiores ipsa. Sequi possimus nemo
+                                r unde ea, enim quae facilis suscipit modi eaque? Architecto
+                                sed earum tempore laborum nostrum reiciendis vitae, quas ipsam porro aspernatur
+                                necessitatibus, saepe atque.</p>
+                        </div>
 
                     </div>
 
