--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -172,8 +172,9 @@
 
                             <div class="bonusLevels">
 
-                                <div class="bonusLevelsRight">
+                                <button class="btn-usePoints">Använd poäng</button>
 
+                                <div class="bonusLevelsRight">
                                     <figure class="level member">
                                         <div class="bonusDot"></div>
                                         <figcaption>Medlem</figcaption>
@@ -198,7 +199,6 @@
 
                             </div>
                         </div>
-
 
                         <div class="leasing">
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum alias a dicta, rem eum
