--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                         <h2>Privatleasing</h2>
                         <!--  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cm exercitationem rerum soluta eius
                             odit facere?</p>-->
-                        <p>Privatleasing med flexibilitet – en exklusiv Limovia-upplevelse.</p>
+                        <p>Privatleasing med flexibilitet, en exklusiv Limovia-upplevelse.</p>
                     </div>
 
                     <div class="servicesButtons">
@@ -277,10 +277,10 @@
                         <h2>Abonnemang</h2>
                         <!--  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ullam deleniti ipsam
                             voluptatibus magnam mollitia consectetur hic.</p>-->
-                        <p>Limovia Abonnemang – En smart, smidig och förutsägbar transportlösning.</p>
+                        <p>En smart, smidig och förutsägbar transportlösning.</p>
                     </div>
 
-                    <div class="servicesButtons"> 
+                    <div class="servicesButtons">
                         <ul>
                             <li><a class="bookServicesButton" href="error.html">Boka</a></li>
                             <li><a class="readMoreServicesButton" href="service.html?service=Abonnemang">Läs mer</a>
