--- a/logIn.html
+++ b/logIn.html
@@ -72,7 +72,7 @@
                         </div>
 
                         <div class="loginInputRow">
-                            <button type="submit">Logga In</i></i></button>
+                            <button type="submit">Logga In</button>
                         </div>
 
                         <div class="loginInputRow loginPassword">
