--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -66,25 +66,44 @@
     <main>
 
         <div class="mainPageContainer">
-            <div class="mainProfileSideLinks">
 
-                <nav class="mainProfileLinks" id="mainProfileSideLinks">
+            <div class="dashboardNavigation">
 
-                    <ul>
-                        <li><a href="#">Översikt</a></li>
-                        <li><a href="#">Resor</a></li>
-                        <li><a href="#">Poäng</a></li>
-                        <li><a href="#">Leasing</a></li>
-                        <li><a href="#">Kampanjer</a></li>
-                        <li><a href="#">Profil</a></li>
-                        <li><a href="#">Support</a></li>
-                    </ul>
+                <nav class="dashboardProfileAndLinks" id="dashboardProfileAndLinks">
+
+                    <div class="profileImageAndLevel">
+
+                        <figure class="avatarProfile">
+                            <img src="IMAGES/womenProfilePicture.jpg" alt="Avatar">
+                            <figcaption class="avatarName">Ms. Beauchamp</figcaption>
+                            <figcaption class="avatarRank">Guld</figcaption>
+                        </figure>
+
+                    </div>
+
+                    <div class="profileLinks">
+
+                        <ul>
+                            <li><a href="#">Översikt</a></li>
+                            <li><a href="#">Resor</a></li>
+                            <li><a href="#">Poäng</a></li>
+                            <li><a href="#">Leasing</a></li>
+                            <li><a href="#">Kampanjer</a></li>
+                            <li><a href="#">Profil</a></li>
+                            <li><a href="#">Support</a></li>
+                        </ul>
+
+                    </div>
 
                 </nav>
 
             </div>
 
-            <div class="mainProfileInfo">
+            <div class="siteInfo">
+                
+            </div>
+
+            <!--<div class="mainProfileInfo">
 
                 <div class="welcomeMessage">
                     <div class="welcomeText">
@@ -220,7 +239,7 @@
 
                 </div>
 
-            </div>
+            </div>-->
 
     </main>
 
