--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -75,7 +75,7 @@
 
                         <figure class="avatarProfile">
                             <img src="IMAGES/womenProfilePicture.jpg" alt="Avatar">
-                            <figcaption class="avatarName">Ms. Beauchamp</figcaption>
+                            <figcaption class="avatarName">Miss. Beauchamp</figcaption>
                             <figcaption class="avatarRank">Guld</figcaption>
                         </figure>
 
@@ -100,7 +100,20 @@
             </div>
 
             <div class="siteInfo">
-                
+
+                <div class="welcomeMessage">
+                    <div class="welcomeText">
+                        <h1>Välkomen tillbaka Miss. Beauchamp</h1>
+                    </div>
+
+                    <div class="welcomeImage">
+                        <button class="settingsButton" onclick="openNotifications()"><i class="fa-solid fa-bell"></i></button>
+                        <button class="notificationsButton" onclick="openSettings()"><i class="fa-solid fa-gear"></i></button>
+                        <!--<img src="IMAGES/VolvoEX90Transparent2.png" alt="Volvo EX90 Transparent">-->
+                    </div>
+
+                </div>
+
             </div>
 
             <!--<div class="mainProfileInfo">
