--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -105,7 +105,7 @@
 
                     <div class="welcomeMessage">
                         <div class="welcomeText">
-                            <h1>Välkomen tillbaka Miss. Beauchamp</h1>
+                            <h1>Välkommen tillbaka Miss. Beauchamp</h1>
                         </div>
 
                         <div class="welcomeImage">
@@ -120,20 +120,56 @@
 
                 </div>
 
+                <!-- Lägg detta direkt inuti .overviewContentConatiner -->
+                <div class="dashboardGrid">
+                    <section class="card card--nextTrip">
+                        <h3>Nästa resa</h3>
+                        <p><strong>Stockholm</strong> → Arlanda</p>
+                        <a href="#">Visa / ändra / avboka resa</a>
+                    </section>
+
+                    <section class="card card--points">
+                        <h3>Poäng</h3>
+                        <div class="pointsRow">
+                            <div class="ring">72%</div>
+                            <div>
+                                <div class="pointsBig">2 450</div>
+                                <small>Move-U poäng</small>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <div class="bar"><span style="width:72%"></span></div>
+                            <small>III Diamant</small>
+                        </div>
+                        <a class="textLink" href="#">Se alla förmåner</a>
+                    </section>
+
+                    <section class="card card--leasing">
+                        <h3>Leasing</h3>
+                        <p>Volvo <strong>EX90</strong></p>
+                        <p><small>8 mån kvar</small></p>
+                        <a href="#">Visa leasingdetaljer</a>
+                    </section>
+
+                    <section class="card card--campaigns">
+                        <h3>Aktuella kampanjer</h3>
+                        <p><strong>Dubbelpoäng</strong> på veckoresor<br>
+                            t.o.m. 30/11</p>
+                    </section>
+
+                    <section class="card card--campaigns2">
+                        <h3>Aktuella kampanjer</h3>
+                        <p>Behöver du hjälp? Lämna feedback i appen.</p>
+                    </section>
+
+                    <section class="card card--support">
+                        <h3>Support</h3>
+                        <p>Behöver du hjälp?</p>
+                        <a href="#">Chatta med Limovia</a>
+                    </section>
+                </div>
+
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         </div>
 
