--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                     <li><a href="#">Integritetspolicy</a></li>
                     <li><a href="#">Tillgänglighet</a></li>
                     <li><a href="#">Limovia karriär</a></li>
-                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="customerDashboard.html">Kontakt</a></li>
                 </ul>
             </div>
         </div>
