--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -113,19 +113,51 @@
                                     class="fa-solid fa-bell"></i></button>
                             <button class="notificationsButton" onclick="openSettings()"><i
                                     class="fa-solid fa-gear"></i></button>
-                            <!--<img src="IMAGES/VolvoEX90Transparent2.png" alt="Volvo EX90 Transparent">-->
                         </div>
 
                     </div>
 
                 </div>
-                
+
                 <div class="dashboardGrid">
+
                     <section class="card card--nextTrip">
 
-                        <h3>Nästa resa</h3>
-                        <p><strong>Stockholm</strong> → Arlanda</p>
-                        <a href="#">Visa / ändra / avboka resa</a>
+                        <h3>Kommande resa</h3>
+
+                        <div class="nextTripInfoContent">
+
+                            <div class="nextTripDriverPicture">
+                                <figure class="driverPicture">
+                                    <img src="IMAGES/DriverProfilePicture.png" alt="Driver">
+                                    <figcaption class="driverAvatarName">Samuel</figcaption>
+                                    <figcaption class="driverTitle">Chaufför</figcaption>
+                                </figure>
+                            </div>
+
+                            <div class="nextTripBookingDetails">
+
+                                <div class="tripDestionations">
+                                    <h4>Solna &#8594; Upplands-Väsby</h4>
+                                </div>
+
+                                <div class="tripTime">
+                                    <p>Fredag 10 Apr. 12:40</p>
+                                </div>
+
+                                <div class="tripVehicle">
+                                    <span><i class="fa-solid fa-car"></i></span>
+                                    <p>Volvo EX90 Excellence</p>
+                                </div>
+
+                            </div>
+
+                            <div class="nextTripButtons">
+                                <button class="rescheduleButton">Boka ny resa</button>
+                                <button class="cancelButton">Avbryt resa</button>
+                            </div>
+
+                        </div>
 
                     </section>
 
@@ -160,8 +192,7 @@
                     <section class="card card--campaigns">
 
                         <h3>Aktuella kampanjer</h3>
-                        <p><strong>Dubbelpoäng</strong> på veckoresor<br>
-                            t.o.m. 30/11</p>
+                        <p><strong>Dubbelpoäng</strong>på veckoresor<br>t.o.m. 30/11</p>
 
                     </section>
 
@@ -181,7 +212,6 @@
                     </section>
 
                 </div>
-
             </div>
         </div>
 
