--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -125,8 +125,8 @@
 
                         <h3>Kommande resa</h3>
 
-                        <div class="nextTripInfoContent">
-
+                        <div class="nextTripLayout">
+                            <!-- Driver -->
                             <div class="nextTripDriverPicture">
                                 <figure class="driverPicture">
                                     <img src="IMAGES/DriverProfilePicture.png" alt="Driver">
@@ -135,31 +135,35 @@
                                 </figure>
                             </div>
 
+                            <!-- Trip info -->
                             <div class="nextTripBookingDetails">
+                                <div class="tripRoute">
+                                    <h4 class="tripHeadline">Solna <span class="arrow">→</span> Upplands-Väsby</h4>
 
-                                <div class="tripDestionations">
-                                    <h4>Solna &#8594; Upplands-Väsby</h4>
+                                    <div class="tripMeta">
+                                        <span><i class="fa-regular fa-calendar"></i>Fre 10 apr. 12:40</span>
+                                        <span class="metaDivider"></span>
+                                        <span><i class="fa-solid fa-car"></i>Volvo EX90 Excellence</span>
+                                    </div>
+
+                                    <div class="tripBadges">
+                                        <span class="badge">Choklad</span>
+                                        <span class="badge">Vin</span>
+                                    </div>
+
                                 </div>
-
-                                <div class="tripTime">
-                                    <p>Fredag 10 Apr. 12:40</p>
-                                </div>
-
-                                <div class="tripVehicle">
-                                    <span><i class="fa-solid fa-car"></i></span>
-                                    <p>Volvo EX90 Excellence</p>
-                                </div>
-
                             </div>
 
+                            <!-- Actions -->
                             <div class="nextTripButtons">
-                                <button class="rescheduleButton">Boka ny resa</button>
-                                <button class="cancelButton">Avbryt resa</button>
+                                <button class="btn primary">Boka ny resa</button>
+                                <button class="btn ghost">Avbryt resa</button>
                             </div>
 
                         </div>
 
                     </section>
+
 
                     <section class="card card--points">
 
