--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -147,8 +147,8 @@
                                     </div>
 
                                     <div class="tripBadges">
-                                        <span class="badge">Choklad</span>
-                                        <span class="badge">Vin</span>
+                                        <span class="badge">Chocklad</span>
+                                        <span class="badge">Champagne</span>
                                     </div>
 
                                 </div>
@@ -166,21 +166,69 @@
 
 
                     <section class="card card--points">
-
                         <h3>Poäng</h3>
-                        <div class="pointsRow">
-                            <div class="ring">72%</div>
-                            <div>
-                                <div class="pointsBig">2 450</div>
-                                <small>Move-U poäng</small>
-                            </div>
-                        </div>
 
-                        <div class="progress">
-                            <div class="bar"><span style="width:72%"></span></div>
-                            <small>III Diamant</small>
+                        <div class="pointsLayout">
+                            <!-- Vänster: cirkel / nivå -->
+                            <div class="pointsGauge">
+                                <div class="gaugeCircle">
+                                    <div class="gaugeInner">
+                                        <span class="gaugePercent">63%</span>
+                                    </div>
+                                </div>
+                                <p class="currentTier">Guld</p>
+                                <button class="tierLink">Se alla förmåner</button>
+                            </div>
+
+                            <!-- Höger: Move-U Miles, progress + nivåer -->
+                            <div class="bonusPoints">
+                                <div class="bonusHeadingRow">
+                                    <h2>Move-U Miles</h2>
+                                    <div class="pointsNumber">
+                                        <span class="pointsValue">3 937</span>
+                                        <span class="pointsUnit">miles</span>
+                                    </div>
+                                </div>
+
+                                <div class="bonusProgress">
+                                    <div class="progress-bar">
+                                        <div class="progress-fill" style="width: 63%;"></div>
+                                    </div>
+                                    <span class="progress-text">1 063 miles kvar till Diamant</span>
+                                </div>
+
+                                <div class="bonusLevels">
+                                    
+                                    <button class="btn-usePoints">Använd poäng</button>
+
+                                    <div class="bonusLevelsRight">
+                                        <figure class="level member">
+                                            <div class="bonusDot"></div>
+                                            <figcaption>Medlem</figcaption>
+                                        </figure>
+
+                                        <figure class="level silver">
+                                            <div class="bonusDot"></div>
+                                            <figcaption>Silver</figcaption>
+                                        </figure>
+
+                                        <figure class="level gold active">
+                                            <div class="bonusDot"></div>
+                                            <figcaption>Guld</figcaption>
+                                        </figure>
+
+                                        <figure class="level diamond">
+                                            <div class="bonusDot"></div>
+                                            <figcaption>Diamant</figcaption>
+                                        </figure>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
                         </div>
-                        <a class="textLink" href="#">Se alla förmåner</a>
 
                     </section>
 
