--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -211,8 +211,8 @@
 
                             <!-- Actions -->
                             <div class="nextTripButtons">
-                                <button class="btn primary">Boka ny resa</button>
-                                <button class="btn ghost">Avbryt resa</button>
+                                <button class="newTripButton primary">Boka ny resa</button>
+                                <button class="cancelTripButton ghost">Avbryt resa</button>
                             </div>
 
                         </div>
