Use points button

--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -87,7 +87,7 @@
         </div>
 
         <nav class="smallDashboardLinks" id="smallDashboardLinks">
-            
+
             <button id="closeDashboardNav" onclick="closeDashboardNav()"><span>&#9932;</span></button>
 
             <div class="profileImageAndLevel">
@@ -255,7 +255,10 @@
 
                                 <div class="bonusLevels">
 
-                                    <button class="btn-usePoints">Använd poäng</button>
+                                    <div class="bonusButtons">
+                                        <button class="usePointsButton">Använd poäng</button>
+                                        <button class="tierLink-SmallerScreens">Se alla förmåner</button>
+                                    </div>
 
                                     <div class="bonusLevelsRight">
                                         <figure class="level member">
