--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -211,8 +211,8 @@
 
                             <!-- Actions -->
                             <div class="nextTripButtons">
-                                <button class="newTripButton primary">Boka ny resa</button>
-                                <button class="cancelTripButton ghost">Avbryt resa</button>
+                                <button class="newTripButton">Boka Ny Resa</button>
+                                <button class="cancelTripButton">Avbryt resa</button>
                             </div>
 
                         </div>
@@ -297,34 +297,37 @@
 
                         <div class="leasingLayout">
 
+                            <!-- Vänster sida -->
                             <div class="leasingLeft">
 
-                                <div>
-                                    <!--<h4 class="leasingHeadline">Nuvarande fordon</h4>-->
-                                    <h4 class="leasingHeadline">Volvo EX90 Twin Motor · 36 mån</h4>
+                                <div class="leasingTopRow">
+                                    <div>
+                                        <p class="leasingLabel">Nuvarande leasing</p>
+                                        <h4 class="leasingHeadline">Volvo EX90 Twin Motor · 36 mån</h4>
+                                    </div>
+
+                                    <div class="leasingPriceBlock">
+                                        <span class="leasingPrice">9 995 kr/mån</span>
+                                        <span class="leasingPriceNote">inkl. service & försäkring</span>
+                                    </div>
                                 </div>
 
-                                <span class="leasingPrice">9 995 kr/mån</span>
-
                                 <div class="leasingCarDetails">
-
                                     <ul>
                                         <li><span>Startdatum:</span> 01 jan 2025</li>
                                         <li><span>Avslut:</span> 31 dec 2027</li>
                                         <li><span>Årlig körsträcka:</span> 10 000 km</li>
                                         <li><span>Ingår:</span> service, däck, försäkring</li>
                                     </ul>
-
                                 </div>
 
                             </div>
 
+                            <!-- Höger sida – bilbild -->
                             <div class="leasingRight">
-
                                 <div class="leasingCarImage">
-                                    <img src="IMAGES/VolvoEX90Leasing.png" alt="Volvo EX90 Twin Motor ">
+                                    <img src="IMAGES/VolvoEX90Leasing.png" alt="Volvo EX90 Twin Motor">
                                 </div>
-
                             </div>
 
                         </div>
@@ -332,28 +335,23 @@
                         <div class="leasingProgressBlock">
 
                             <div class="leasingProgressHeader">
-
                                 <span>Återstående månader</span>
                                 <span>24 / 36</span>
-
                             </div>
 
                             <div class="leasingProgressBar">
-
                                 <span style="width: 66%;"></span>
-
                             </div>
 
                         </div>
 
                         <div class="leasingButtons">
-
                             <button class="leasingUpgradeButton">Uppgradera</button>
                             <button class="leasingDetailsButton">Avtalsdetaljer</button>
-
                         </div>
 
                     </section>
+
 
                     <section class="card card--campaigns">
 
