--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -315,9 +315,8 @@
                                 <div class="leasingCarDetails">
                                     <ul>
                                         <li><span>Startdatum:</span> 01 jan 2025</li>
-                                        <li><span>Avslut:</span> 31 dec 2027</li>
+                                        <li><span>Slutdatum:</span> 31 dec 2027</li>
                                         <li><span>Årlig körsträcka:</span> 10 000 km</li>
-                                        <li><span>Ingår:</span> service, däck, försäkring</li>
                                     </ul>
                                 </div>
 
